Remove SharedVariableMap from server session
As part of the move toward a stateless server session, the m_sharedVariableMap has been removed from the server session.

The SharedVariableMap is now used exclusively on the client side.

Instead of synchronizing variables from server to client, the client session initializes its VariableMap using the ISessionService.

To update variables after initialization, the server can send a SharedContextChangedNotification to the client.

423389